{
    "name": "MainCharacter Input Actions",
    "maps": [
        {
            "name": "MainCharacter",
            "id": "70142087-0aaa-4d11-bce8-5f559c90dbf5",
            "actions": [
                {
                    "name": "Move",
                    "type": "Value",
                    "id": "3b976d35-a67e-4977-b24d-4a41b216122c",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "WASD",
                    "id": "a66a7889-7c33-4a89-a383-60f01850f484",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "bd3b2d98-12eb-4580-be85-a1711269e6dd",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "0067c871-9b72-47bf-a18b-dc43987beaf0",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "8480687c-e306-4a5c-835b-6a4070ab27bc",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "3b1ee03d-06e4-4f9b-ab5a-e3f1fb7d0b2f",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                }
            ]
        },
        {
            "name": "Combat",
            "id": "692dbda0-b555-4e2e-83b6-9303677e2fda",
            "actions": [
                {
                    "name": "Attack",
                    "type": "Button",
                    "id": "f6e9a248-455b-4012-9a49-95189fa006c5",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "71949f75-58ec-4e70-9779-063d6b2c1326",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Attack",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}